# mcp-sync

./: .gitignore  LICENSE  README.md  mcp-servers.json  mcp-sync.py  mcp_sync.py  pyproject.toml  sample.json
