[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-sync"
version = "0.1.1"
description = "Sync MCP server configurations across different tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "ejfn", email = "your-email@example.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
mcp-sync = "mcp_sync:main"

[project.urls]
Homepage = "https://github.com/ejfn/mcp-sync"
Repository = "https://github.com/ejfn/mcp-sync"
